Update default HTML

--- a/src/frontend/updates/index.html
+++ b/src/frontend/updates/index.html
@@ -7,6 +7,6 @@
     <title>Affichage Écran d'Actualisation</title>
 </head>
 <body>
-    
+    <h1>Affichage Écran d'Actualisation</h1>
 </body>
 </html>
