Ajout d'un texte simple

--- a/src/frontend/operator/index.html
+++ b/src/frontend/operator/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Affichage Opérateur</h1>
-    <a href="login.html">"oui"</a>
+    <a>bienvenue sur la page administrateur ! Connectez-vous pour accéder a vos données...</a>
+    <a href="login.html">"CONNECTE TOI"</a>
 </body>
 </html>
