ajout du script permettant la vérification Token

--- a/src/frontend/operator/index.html
+++ b/src/frontend/operator/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Affichage Opérateur</title>
+    <script src="./verificationToken.js"></script>
 </head>
 <body>
     <h1>Affichage Opérateur</h1>
-    <a>bienvenue sur la page administrateur ! Connectez-vous pour accéder a vos données...</a>
-    <a href="login.html">"CONNECTE TOI"</a>
+    <a>Dernier ticket récupéré :</a>
+    <script>verifierToken()</script>
 </body>
 </html>
