--- a/src/frontend/client/index.html
+++ b/src/frontend/client/index.html
@@ -5,10 +5,18 @@
      <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js"></script>
     <title>Affichage Client</title>
 </head>
 <body>
-    <h1 type="Title">Accueil</h1>
+    <h1>Ticket en cours</h1>
+    <body>
+        <div id="container">
+            <div id="login-box">
+                <button onclick="prendreTicket()">Prendre un ticket</button>
+                <h1 id="ticket"></h1>
+            </div>
+        </div>
 
 </body>
 </html>
