--- a/src/frontend/updates/index.html
+++ b/src/frontend/updates/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Affichage Écran d'Actualisation</title>
+    <script src="index.js"></script>
+    <title>Écran d'Actualisation</title>
 </head>
+<h1>Ticket en cours</h1>
 <body>
-    <h1>Affichage Écran d'Actualisation</h1>
+    <div id="container">
+        <div id="login-box">
+            <h1 id="ticket">Aucun ticket</h1>
+        </div>
+    </div>
+    
+            
 </body>
 </html>
