--- a/src/frontend/operator/index.html
+++ b/src/frontend/operator/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>Affichage Opérateur</h1>
+    <p>Guichet N°<b id="desk">----</b></p>
     <p>Ticket en cours : <b id="ticket">aucun</b></p>
     <br/>
     <button type="submit" id="TicketButton" onclick="nextTicket()" >Prendre un Ticket</button>
