Ajout de l'affichage du guichet + correction marge

--- a/src/frontend/client/index.html
+++ b/src/frontend/client/index.html
@@ -14,7 +14,7 @@
         <div id="container">
             <div id="login-box">
                 <button onclick="prendreTicket()">Prendre un ticket</button>
-                <h1 id="ticket"></h1>
+                <h2 id="ticket">Ticket n°</h2>
             </div>
         </div>
 
