--- a/src/frontend/updates/index.html
+++ b/src/frontend/updates/index.html
@@ -13,6 +13,7 @@
     <div id="container">
         <div id="login-box">
             <h1 id="ticket">Aucun ticket</h1>
+            <h2 id="guichet">Guichet n°</h2>
         </div>
     </div>
     
